--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         
         <label>
             Favorite Season: <br>
-            <input type="checkbox" name="Favorite_Season" value="spring"> Spring
-            <input type="checkbox" name="Favorite_Season" value="summer"> Summer
-            <input type="checkbox" name="Favorite_Season" value="fall"> Fall
-            <input type="checkbox" name="Favorite_Season" value="winter"> Winter
+            <input type="checkbox" name="Favorite Season" value="spring"> Spring
+            <input type="checkbox" name="Favorite Season" value="summer"> Summer
+            <input type="checkbox" name="Favorite Season" value="fall"> Fall
+            <input type="checkbox" name="Favorite Season" value="winter"> Winter
         </label>
 
         <label>
