--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>HTML_Form_with_CSS</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
-
+    
 <body>
     <h1>User Information</h1>
-
     <form action="results.html" method="GET">
         <label>
             First Name:
@@ -140,12 +139,12 @@
 
         <label>
             Bio:
-            <textarea name="Bio" id="bio" rows="10" cols="79%"></textarea>
+            <textarea name="Bio" id="bio" rows="10" cols="79%" placeholder="Enter Bio"></textarea>
         </label>
 
         <label>
-            Url:
-            <input type="url" name="webUrl" id="webUrl">
+            URL:
+            <input type="url" name="webUrl" id="webUrl" placeholder="Enter URL">
         </label>
 
         <button type="submit">Submit</button>
